:bug: Fix copy button cropped

--- a/frontend/resources/styles/common/refactor/mixins.scss
+++ b/frontend/resources/styles/common/refactor/mixins.scss
@@ -97,8 +97,7 @@
   color: var(--menu-foreground-color);
 }
 
-@mixin copyWrapper {
-  @include flexColumn;
+@mixin copyWrapperBase {
   position: relative;
   min-height: $s-32;
   width: $s-156;
